--- a/scss/1-base/_color.scss
+++ b/scss/1-base/_color.scss
@@ -1,10 +1,18 @@
 // Colors
 $base-text: #414042;
 $base-bg: #ffffff;
+$soft-white: #f3f3f3;
 $light-gray: rgba(247, 246, 246, 0.4);
 $body-link-color: #daa92c;
 $box-shadow: inset 0 1px 8px 0 rgba(0, 0, 0, 0.48);
 $gray-border: #979797;
+$light-gray-2: #b6b6b5;
+$natural-frame-color: #e9be8a;
+$transparent-gray: rgba(65, 64, 66, 0.4);
+$heightlight-heading: #efefef;
+$work-item-border-color: #d1d1d1;
+$nav-icon-color: #5e5d5f;
+$navMobiBorder: #eeeeee;
 
 body{
     color: $base-text;
@@ -42,4 +50,34 @@ body{
             }
         }
     }
+}
+
+.product-figure-wrapper{
+    .button-wrap{
+        span{
+            color: $light-gray-2;
+        }
+    }   
+}
+
+.btn.bg-primary{
+    background-color: $body-link-color !important;
+    &:hover{
+        background-color: $body-link-color !important;
+    }
+}
+
+.total-price-wrap{
+    .btn.bg-primary{
+        color: $white;
+    }
+    h5{
+        sub{
+            color: $base-text;
+        }
+    }
+}
+
+.read-more{
+    color: $transparent-gray;
 }
