--- a/scss/4-layouts/_lead-container.scss
+++ b/scss/4-layouts/_lead-container.scss
@@ -9,6 +9,9 @@
         text-align: center;
         margin-bottom: 15px;
         text-transform: uppercase;
+        @include media-breakpoint-down(sm){
+            margin-bottom: 9px;
+        }
     }
     h6{
         text-align: center;
