--- a/scss/5-pages/_shop-by-artist.scss
+++ b/scss/5-pages/_shop-by-artist.scss
@@ -6,6 +6,12 @@
     h5{
         margin-bottom: 10px;
         margin-top: 25px;
+        @include media-breakpoint-down(sm){
+            margin-bottom: 3px;
+        }
+    }
+    p{
+        margin-bottom: 5px;
     }
     
     .body-link{
